changed and corrected RoundTest